<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background" 
    android:onClick="Tab" >
    
        <LinearLayout
            android:id="@+id/tvLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/welcome"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="35sp"
                android:textStyle="italic"
                android:padding="15dp" />
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
            
            <ImageButton
                android:id="@+id/icon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/icon"
                android:contentDescription="@string/logo"
                android:onClick="Next"/>
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/tv2Layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvTap"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
               
                android:gravity="center_horizontal"
                android:text="@string/tap" 
                 android:textColor="#ffffff"
                android:textStyle="italic"
                android:padding="25dp"/>
            
        </LinearLayout>
</LinearLayout>